--- a/components/active-link/ActiveLink.module.css
+++ b/components/active-link/ActiveLink.module.css
@@ -2,38 +2,40 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-
   align-items: center;
   margin: 0.5rem 0;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  border: 4px double white;
   width: 100%;
   max-width: 200px;
-
+  
+  border: 4px double black;
   background-color: #3b82f6;
   color: white;
   text-decoration: none;
 
   &.inactive {
-    color: white;
+    color: gray;
+     opacity: 0.5;
     border: 4px double #ef4444;
     background-color: #ef4444;
     &:hover {
-      color: black;
+      color: black; 
+      opacity: 0.5;
       border: 4px double #22c55e;
       background-color: #22c55e;
       text-decoration: underline;
     }
   }
 
-  /* &.inactive {
-    border: 2px dotted #ef4444;
-    background-color:rgb(112, 102, 73);
-  } */
   &.active {
-    background-color: #1d4ed8;
+    /* const isActiveClass = "text-blue-200 underline border" // global */
     color: white;
+
+
+    /* background-color: #1d4ed8;
+    background-color: magenta;
+    background-color: var(--tw-bg-opacity); */
     &:hover {
       border: 4px double #ef4444;
       background-color: #eab308;
