--- a/components/active-link/ActiveLink.module.css
+++ b/components/active-link/ActiveLink.module.css
@@ -1,8 +1,10 @@
-.link {
+.link { /* ok */
   border: 5ps double black;
   margin: 0 .25rem;
 
-  &:hover {
+  display: flex;
+
+  &:hover { /* ok */
     /* background-color: #4f46e5; */
     border: 3px double white;
     /* Indigo 600 */
@@ -16,14 +18,36 @@
     transition: all 0.2s ease;
     
   }
-  &.active-link {
+  &.active { /* ok */
     background-color: green;
+    border: 2px dotted yellow;
+    padding: .3rem;
+
   }
-  &.active {
-    background-color: green;
+  &.inactive { /* ok */
+    /* background-color: red; */
+    background-color: gray;
+    /* border: 2px dotted yellow; */
+    padding: .3rem;
+
   }
 }
+/* <span className="h-8 w-8   flex justify-center items-center border-white border-5 border-double"> */
 
+.icon-container { /* ok */
+  border: 3px solid black;
+  display: flex;
+  /* min-width: 3rem;
+  min-height: 2rem; */
+  justify-content: center;
+  align-items: center;
+  /* margin: .25rem 0; */
+  margin: 0 .25rem ;
+  padding: 0 .25rem ;
+}
+.icon {
+  border: 3px solid black;
+}
 /* .link:hover {
   background-color: #4f46e5; */
   /* Indigo 600 */
