fix: ActiveLink styles: somewhat cleaner look and feel

--- a/components/active-link/ActiveLink.module.css
+++ b/components/active-link/ActiveLink.module.css
@@ -34,13 +34,13 @@
   }
 
   /* ok */
-  /* &.inactive {
+  &.inactive {
     background-color: gray;
     padding: 0.3rem;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2), -2px -2px 5px rgba(255, 255, 255, 0.5);
     border: 3px double white;
     border: 3px double gray;
-  } */
+  }
 }
 
 /* <span className="h-8 w-8   flex justify-center items-center border-white border-5 border-double"> */
